# physika3.0-integration

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
docker/: Dockerfile
examples/: CMakeLists.txt
examples/anisotropy_sample/: CMakeLists.txt  anisotropy_sample.cpp
examples/collision_sample/: CMakeLists.txt
examples/collision_sample/ccd_dcd_example/: CMakeLists.txt  ccd.cpp  ccd.h  cmesh.cpp  cmodel.cpp  crigid.cpp  crigid.h  obj-viewer.cpp  tmbvh.h
examples/collision_sample/common_collision/: CMakeLists.txt  collision_sample.cpp
examples/collision_sample/mixed_cd_unit_test/: CMakeLists.txt
examples/collision_sample/mixed_collision_demo/: CMakeLists.txt  bunny.inl  cmesh.cpp  cmodel.cpp  crigid.cpp  main.cpp
examples/collision_sample/particle_collision_demo/: CMakeLists.txt  cmodel.cpp  crigid.cpp  crigid.h  main.cpp  particles.cpp  particles.h
examples/collision_sample/rigid_falling_demo/: CMakeLists.txt  cmodel.cpp  crigid.cpp  main.cpp
examples/collision_sample/rigid_falling_tm/: CMakeLists.txt  cmesh.cpp  cmodel.cpp  cmodel.h  crigid.cpp  crigid.h  obj-viewer.cpp  tmbvh.cpp  tmbvh.h
examples/collision_sample/rigid_pbd/: CMakeLists.txt
examples/collision_sample/scene_query/: CMakeLists.txt  cmesh.cpp  cmodel.cpp  crigid.cpp  crigid.h  obj-viewer.cpp  tmbvh.cpp  tmbvh.hpp
examples/collision_sample/sdf_collision_demo/: CMakeLists.txt
examples/collision_sample/tetra_collision_demo/: CMakeLists.txt  cmodel.cpp  crigid.cpp
examples/collision_sample/tetramesh_cd_unit_test/: CMakeLists.txt
examples/collision_sample/trimesh_cd_unit_test/: CMakeLists.txt
examples/collision_sample/trimesh_collision_demo/: CMakeLists.txt  cmesh.cpp  cmodel.cpp  crigid.cpp  crigid.h  main.cpp  tetra.cpp
examples/datadriven_sample/: CMakeLists.txt  datadriven_sample.cpp  datadriven_solver.py  example_scene.json  splishsplash_config.py  utils.py
examples/elastic_sample/: CMakeLists.txt  elastic_sample.cpp
examples/fluid_sample/: CMakeLists.txt  fluid_sample.cpp
examples/fluid_sample2/: CMakeLists.txt  fluid_sample2.cpp
examples/fluid_solid_coupling_sample/: CMakeLists.txt  fluid_solid_coupling_sample.cpp
examples/framework_sample/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.cuh  dummy_cuda_solver.cpp  dummy_cuda_solver.cu  dummy_cuda_solver.hpp  dummy_sfi_solver.cpp  dummy_sfi_solver.hpp  framework_sample.cpp  single_obj_solver.cpp  single_obj_solver.hpp
examples/gasLiquidPhaseChange_sample/: CMakeLists.txt  gasLiquidPhaseChange_sample.cpp
examples/gl_dependencies/glad-4.6/: CMakeLists.txt
examples/gl_dependencies/glfw-3.3.0/: CMakeLists.txt
examples/gl_particle_render/: CMakeLists.txt
examples/gl_render_style/shader/: shader1.vs
examples/gl_render_style/shaders/: shader1.fs
examples/granular_integration_sample/: CMakeLists.txt  granular_sample.cpp
examples/granular_sample/: CMakeLists.txt  granular_sample.cpp
examples/gui/: CMakeLists.txt
examples/gui/glut_gui/: CMakeLists.txt  Camera.cpp  Camera.h  GLApp.cpp  GLApp.h
examples/hard_snow_sample/: CMakeLists.txt  hard_snow_sample.cpp
examples/model_helper_sample/: CMakeLists.txt  model_helper_sample.cpp
examples/multiphase_fluid_accelerate_sample/: CMakeLists.txt  multiphase_fluid_accelerate_sample.cpp
examples/snow_sample/: CMakeLists.txt  snow_sample.cpp
examples/solidLiquidPhaseChange_sample/: CMakeLists.txt  USTB_TestSLMelt.cpp  USTB_TestSLRadiate.cpp  USTB_TestSLSolidify.cpp
examples/thickening_nonnewton_sample/: CMakeLists.txt  thickening_nonnewton_sample.cpp
examples/thinning_nonnewton_sample/: CMakeLists.txt  thinning_nonnewton_sample.cpp
src/: CMakeLists.txt
src/collision/: CMakeLists.txt
src/collision/interface/: collidable_hf.hpp  collidable_points.hpp  collidable_ray.hpp  collidable_sdf.hpp  collidable_trianglemesh.hpp  collision_data.hpp  mesh_hf_collision_detect.hpp  mesh_hf_collision_solver.hpp  mesh_mesh_collision_detect.hpp  mesh_mesh_collision_solver.hpp  mesh_mesh_discrete_collision_detect.hpp  mesh_mesh_discrete_collision_solver.hpp  mesh_ray_collision_detect.hpp  mesh_ray_collision_solver.hpp  particles_collision_detect.hpp  particles_collision_solver.hpp  sdf_points_collision_detect.hpp  sdf_points_collision_solver.hpp
src/collision/internal/: collidable_mesh.cuh  collision_aabb.cpp  collision_aabb.hpp  collision_array3d.hpp  collision_box.cuh  collision_box.hpp  collision_bvh.cpp  collision_bvh.cuh  collision_bvh.hpp  collision_data.cpp  collision_def.cuh  collision_define.hpp  collision_mat3f.cuh  collision_mat3f.hpp  collision_pair.cuh  collision_pair.hpp  collision_qbvh.cpp  collision_qbvh.cuh  collision_qbvh.hpp  collision_quaternion.hpp  collision_tool.cuh  collision_transf.hpp  collision_tri3.cuh  collision_tri3f.cpp  collision_tri3f.hpp  collision_tricontact.cuh  collision_util.cpp  collision_util.hpp  collision_vec3.cuh  collision_vec3.hpp  contact.hpp  cplane.hpp  crigid.hpp  cubic.cpp  cuda_helper_math.hpp  cuda_utilities.hpp  distance_field3d.cu  distance_field3d.hpp  height_field.hpp  manifold.hpp  (+23 more)
src/datadriven/: CMakeLists.txt  datadriven_solver.cpp  datadriven_solver.h
src/framework/: CMakeLists.txt  object.cpp  object.hpp  scene.cpp  scene.hpp  solver.hpp  world.cpp  world.hpp
src/mpm_snow/: CMakeLists.txt
src/mpm_snow/Interface/: mpm_snow.hpp
src/mpm_snow/source/: mpm_snow.cpp  snow_cuda.cu  snow_kernel.cuh  snow_params.cuh
src/multiphase_fluids_accelerate/: CMakeLists.txt
src/multiphase_fluids_accelerate/interface/: multiphase_fluid_solver.hpp
src/pbd_elastic/: CMakeLists.txt  pbd_elastic.cu  pbd_elastic_kernel.cu  pbd_elastic_kernel.cuh  pbd_elastic_params.hpp  pbd_elastic_solver.cpp  pbd_elastic_solver.hpp
src/pbd_fluid/: CMakeLists.txt
src/pbd_fluid_solid_coupling/: CMakeLists.txt
src/pbd_gasLiquidPhaseChange/: CMakeLists.txt
src/pbd_granular/: CMakeLists.txt
src/pbd_solidLiquidPhaseChange/: CMakeLists.txt
src/pbf_nonnewton/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/framework/: CMakeLists.txt  object_test.cpp  scene_test.cpp  world_test.cpp
(+260 files in other folders)
