add_subdirectory(common_collision)
add_subdirectory(rigid_falling_tm)

# add_subdirectory(rigid_falling)
add_subdirectory(trimesh_cd_unit_test)
add_subdirectory(mixed_cd_unit_test)
add_subdirectory(sdf_collision_demo)
add_subdirectory(tetramesh_cd_unit_test)
add_subdirectory(scene_query)
add_subdirectory(ccd_dcd_example)
add_subdirectory(rigid_pbd)
add_subdirectory(particle_collision_demo)
add_subdirectory(trimesh_collision_demo)
add_subdirectory(tetra_collision_demo)
add_subdirectory(mixed_collision_demo)
add_subdirectory(rigid_falling_demo)

set_target_properties(collision_sample PROPERTIES FOLDER "collision_sample")
set_target_properties(rigid_falling_tm PROPERTIES FOLDER "collision_sample")

# set_target_properties(rigid_falling PROPERTIES FOLDER "collision_sample")
set_target_properties(trimesh_cd_unit_test PROPERTIES FOLDER "collision_sample")
set_target_properties(tetramesh_cd_unit_test PROPERTIES FOLDER "collision_sample")
set_target_properties(sdf_collision_demo PROPERTIES FOLDER "collision_sample")
set_target_properties(mixed_cd_unit_test PROPERTIES FOLDER "collision_sample")
set_target_properties(scene_query PROPERTIES FOLDER "collision_sample")
set_target_properties(ccd_dcd_example PROPERTIES FOLDER "collision_sample")
set_target_properties(rigid_pbd PROPERTIES FOLDER "collision_sample")
set_target_properties(particle_collision_demo PROPERTIES FOLDER "collision_sample")
set_target_properties(trimesh_collision_demo PROPERTIES FOLDER "collision_sample")
set_target_properties(tetra_collision_demo PROPERTIES FOLDER "collision_sample")
set_target_properties(mixed_collision_demo PROPERTIES FOLDER "collision_sample")
set_target_properties(rigid_falling_demo PROPERTIES FOLDER "collision_sample")